@startuml WeaponSystem
skinparam classAttributeIconSize 0
left to right direction
skinparam nodesep 10
skinparam ranksep 10

interface IWeapon {
  +WeaponDataSO: WeaponDataSO
  +OnAttack: Action
  +SetOwner(owner: GameObject): void
  +GetOwner(): GameObject
  +GetDamage(): float
  +ExecuteAttack(): void
  +AddDamagePercent(multiplier: float): void
  +RemoveDamagePercent(multiplier: float): void
  +ResetDamagePercent(): void
  +AddFlatDamage(amount: float): void
  +RemoveFlatDamage(amount: float): void
  +ResetFlatDamage(): void
}

interface IProjectileWeapon {
  +ProjectileSpeed: float
  +ProjectilePoolTag: string
  +ShootPoint: Transform
  +SetProjectileTag(tag: string): void
}

interface IFireStrategy {
  +Execute(weapon: IProjectileWeapon): void
}

class HoldingItemWatcher {
  +OnHoldingItemChanged: Action
}

class Attack {
  -baseDamage: float
  -holdingItem: Transform
  -holdingItemWatcher: HoldingItemWatcher
  -currentWeapon: IWeapon
  +CurrentWeapon: IWeapon
  +OnAttack: Action
  +TryAttack(): void
  +RefreshWeapon(): void
  +AddDamagePercent(percent: float): void
  +RemoveDamagePercent(percent: float): void
  +ResetDamagePercent(): void
  +AddFlatDamage(amount: float): void
  +RemoveFlatDamage(amount: float): void
  +ResetFlatDamage(): void
}

abstract class BaseWeapon {
  #weaponData: WeaponDataSO
  #baseDamage: float
  #currentDamage: float
  #cooldown: float
  +OnAttack: Action
  #owner: GameObject
  +damagePercent: float
  #flatDamage: float
  +GetOwner(): GameObject
  +SetOwner(owner: GameObject): void
  +GetDamage(): float
  +ExecuteAttack(): void
  #CanAttack(): bool
  #PerformAttack(): void
  +ExecuteFromAnimationEvent(): void
  #OnDamageChanged(): void
  #ExecuteWeaponAction(): void
}

class MeleeWeapon {
  -hitbox: Hitbox
  +SetOwner(owner: GameObject): void
  +EnableHitbox(): void
  +DisableHitbox(): void
}

class ProjectileWeapon {
  -projectileSpeed: float
  -projectilePoolTag: string
  -manaCost: float
  -shootPoint: Transform
  -mana: Mana
  -firePattern: IFireStrategy
  +Shoot(): void
  +SetProjectileTag(tag: string): void
}

class MeleeProjectileWeapon {
  -projectileDamage: float
  -projectileSpeed: float
  -projectilePoolTag: string
  -manaCost: float
  -shootPoint: Transform
  -mana: Mana
  -firePattern: IFireStrategy
  +Shoot(): void
  +SetProjectileTag(tag: string): void
}

class SummonWeapon {
  -manaCost: float
  -spawnPoints: SummonSpawnPoint[]
  -mana: Mana
}

class Hitbox {
  -damage: float
  -owner: GameObject
  +OnHit: Action
  +SetDamage(damage: float): void
  +SetOwner(owner: GameObject): void
  +EnableCol(enable: bool): void
}

class ProjectileHit {
  +OnSpawn: Action
  +SetProjectlieSpeed(value: float): void
}

abstract class BasePatternFire {
  +Execute(weapon: IProjectileWeapon): void
  #SpawnProjectile(weapon: IProjectileWeapon, position: Vector3, rotation: Quaternion): void
}

IWeapon <|.. BaseWeapon
IProjectileWeapon <|.. ProjectileWeapon
IProjectileWeapon <|.. MeleeProjectileWeapon
IFireStrategy <|.. BasePatternFire

BaseWeapon <|-- MeleeWeapon
BaseWeapon <|-- ProjectileWeapon
MeleeWeapon <|-- MeleeProjectileWeapon
BaseWeapon <|-- SummonWeapon
Hitbox <|-- ProjectileHit

Attack -right-> IWeapon : controls
Attack -down-> HoldingItemWatcher : observes
MeleeWeapon -right-> Hitbox : melee source
ProjectileWeapon -down-> IFireStrategy : uses
MeleeProjectileWeapon -down-> IFireStrategy : uses
BasePatternFire -right-> ProjectileHit : spawns
SummonWeapon ..> Attack : buffs minion
note bottom of Attack
Entry point from character attack logic.
end note

note bottom of BaseWeapon
Shared cooldown and damage layer.
end note

note bottom of MeleeWeapon
Hitbox toggled by animation events.
end note

note bottom of ProjectileWeapon
Projectile spawning via fire strategy.
end note

@enduml
